B&L QA/objects/Other_Call_Activity__c.object
<CustomObject>
    <description>CHNSU object to create and report the other activities - which include Non-Field Activities and Distributor Coordination.</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>CHNSU field to capture the type of activity under Multiple call type</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Trip</fullName>
                </value>
                <value>
                    <fullName>Company Office/Home Office</fullName>
                </value>
                <value>
                    <fullName>Distributor Coordination</fullName>
                </value>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>CHNSU  field to allow the user to enter any details about the call or report the call.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>CHNSU field to store the end date of an other activity.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Session__c</fullName>
        <description>CHNSU field to store the end session of an OTHER ACTIVITY call.</description>
        <label>End Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Record_ID__c</fullName>
        <description>CHNSU field to store the ID of the corresponding EVENT that gets created after an other call activity is created.</description>
        <label>Event Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>CHNSU field to store the start date of an other activity.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Session__c</fullName>
        <description>CHNSU field to store the start session of an OTHER ACTIVITY call.</description>
        <label>Start Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Other Call Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Session__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Session__c</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_14_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Session__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Session__c</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>最近14天</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Session__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Session__c</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>最近30天</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_3_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Session__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Session__c</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>最近03天</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Session__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Session__c</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>最近07天</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OCA-{0000000000}</displayFormat>
        <label>Other Call Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Call Activities</pluralLabel>
    <recordTypes>
        <fullName>APACSUOther_Call_Activity</fullName>
        <active>true</active>
        <description>APACSU Other Call Activity Record Type to store the details of the a call of type Other Activity</description>
        <label>APACSUOther Call Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>CHNSU_Other_Call_Activity</fullName>
        <active>true</active>
        <description>CHNSU Other Call Activity Record Type to store the details of the a call of type Other Activity</description>
        <label>CHNSU Other Call Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Other_Call_Activity</fullName>
        <active>true</active>
        <description>INDSU Other Call Activity Record Type to store the details of the a call of type Other Activity</description>
        <label>INDSU Other Call Activity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Check</fullName>
        <active>true</active>
        <description>Validation rule to ensure that the end date needs to be greater than or equal to start date.</description>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be less than the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Check</fullName>
        <active>true</active>
        <description>CHNSU validation rule to allow the users to be able to create other activity record within past 3 days (including today but not later than today)</description>
        <errorConditionFormula>End_Date__c &lt; TODAY() -3 || End_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You cannot create an other activity ending in the future or any date earlier than past 3 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Session_Check</fullName>
        <active>true</active>
        <description>Validation rule to ensure that if the end date is the same as the start date, and start session = PM, then end session also has to be PM.</description>
        <errorConditionFormula>AND((End_Date__c =  Start_Date__c), ispickval( Start_Session__c, &quot;PM&quot;) , ispickval( End_Session__c, &quot;AM&quot;))</errorConditionFormula>
        <errorDisplayField>End_Session__c</errorDisplayField>
        <errorMessage>End Session cannot be lesser than the start session.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Check</fullName>
        <active>true</active>
        <description>CHNSU validation rule to allow the users to be able to create other activity record within past 3 days (including today but not later than today)</description>
        <errorConditionFormula>Start_Date__c &lt; TODAY() -3 || Start_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>You cannot create an other activity for a future date or any date earlier than past 3 days.</errorMessage>
    </validationRules>
</CustomObject>